# speech_cn

./: .gitignore  AzureSpeechClient.py  QUICKSTART.md  README.md  main.py  package.json  pyproject.toml  start-backend.sh
.github/workflows/: azure-static-web-apps-happy-sand-0ad0caf00.yml
backend/: __init__.py  api.py  requirements.txt
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
frontend/src/services/: speechService.js
speech_cn/: __init__.py
src/: App.css  App.jsx  Speech.ts
